--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section>
       <h2> My Morning Routine</h2>
       <h2> By Anthony Bellinger</h2>
+      published on September 26, 2025.
       <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About Me</a> |
