--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
      </header>
      
     <section>
+      <h2> By: Anthony Bellinger</h2>
       <h2> My Morning Routine</h2>
-      <h2> By Anthony Bellinger</h2>
       published on September 26, 2025.
       <nav>
             <a href="index.html">Home</a> |
