--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <a href="contact.html">Contact</a> |
         </nav><br>
         <h2>Contact Me</h2>
-        <form>
+        <form name="contact-form" netlify>
             <label for="name">Name:</label><br>
             <input type="text" id="flname" name="flname"><br>
             <label for="email">Email:</label><br>
