--- a/index.html
+++ b/index.html
@@ -62,17 +62,16 @@
          </table>
        <p>This is a table showcasing my classes, class times, and the amount of credits that the class is. <p>
   </section>
-     <form name="contact" netlify>
-    <р>
-       <Label>Name <input type="text" name="name" /></1abe1>
-     </р>
-    <р>
-      <label>Email <input type="email" name="email" /></label>
-   </р>
- <р>
-   <button type="submit">Submit</button>
-</р>
-   </form>
-  <script src="index.js"></script>
+     <form action="">
+      <h2>Sign up for my Newsletter</h2>
+        <p>Enter your Name and Email Address down below.</p>
+  
+        <input type="text" placeholder="Name" name="name" required>
+        <input type="text" placeholder="Email address" name="mail" required>
+        <label>
+         <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+        </label>
+          <input type="submit" value="Sign Up">
+     </form>
 </body>
 </html>
