--- a/contact.html
+++ b/contact.html
@@ -16,16 +16,18 @@
         </nav><br>
         <h2>Contact Me</h2>
         <form name="contact-form" netlify>
-            <label for="name">Name:</label><br>
-            <input type="text" id="flname" name="flname"><br>
-            <label for="email">Email:</label><br>
-            <input type="text" id="emailad" name="emailad"><br>
             
-            <label for="Reason for Contact">Reason for Contact</label><br>
-            <select id="Reason" name="Reason"><br>
-                <option value="Saying hi">Saying hi</option>
-                <option value="looking for a contractor">looking for a contractor</option>
-                <option value="interested in interview">interested in interview</option>
+    <р>
+       <Label>Name <input type="text" name="name" /></1abe1>
+     </р>
+    <р>
+      <label>Email <input type="email" name="email" /></label>
+   </р>
+ <р>
+   <button type="submit">Submit</button>
+</р>
+   </form>
+  <script src="index.js"></script>
             </select><br><br>
 
             <textarea name="message" rows="12" cols="32">
