--- a/contact.html
+++ b/contact.html
@@ -16,25 +16,20 @@
         </nav><br>
         <h2>Contact Me</h2>
         <form name="contact-form" netlify>
-        <Label>Name <input type="text" name="name" /></Label>
-     <label>Email <input type="email" name="email" /></label>
-     
-   <button type="submit">Submit</button>
-</form>
-  <label for="Reason for Contact">Reason for Contact</label><br>
+         <Label>Name <input type="text" name="name" /></Label>
+         <Label>Email <input type="email" name="email" /></Label>
+        <button type="submit">Submit</button>
+        </form>
+        <label for="Reason for Contact">Reason for Contact</label><br>
             <select id="Reason" name="Reason"><br>
                 <option value="Saying hi">Saying hi</option>
                 <option value="looking for a contractor">looking for a contractor</option>
                 <option value="interested in interview">interested in interview</option>
 
-
-<script src="index.js"></script>
+    <script src="index.js"></script>
             </select><br><br>
-
             <textarea name="message" rows="12" cols="32">
-
             </textarea><br>
-
             <button type="button" onclick="">Submit</button>
 
         </form>
