--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         </article>
       </p>
      <img src = "campus.jpg" Width = 400px>
-
-        
-    </section>
+      </section>
        <h2>After Classes Routinue & Study Schedule </h2>
        <p> To continue, at Michigan State University, my class schedule consists of 2 more person classes. With this being said, the classes are MI 401 Topics in Information science at <strong > 12:00 pm</strong> and MI 349 Web Design and Devlopment at <strong > 3:00 pm</strong>. After going to all my classes, it is usually about <strong > 5:00 pm</strong>. I make my way to the IM West gym on campus and usually spen roughly an hour max at the gym. I would usually stretch,do cardio, do weights, and reps of sit ups to strengthen my core. After about an hour, i would leave and go to the dining hall to eat some food. The options have of course changed since it is now dinner time. At the dining hall I decided to eat dinner and get dessert and then leave. I then walk to my car and drive back to my apartment. When I arrive at my apartment, I take a shower, get out, and then begin reviewing my planner. Scheduled for <strong >7:30 - 9:30 pm</strong>, I study, work on, and complete any work that i can get done within this time period as I’m usually very productive around this time along with the morning. After my study session, I review my tasks for the next day, brush my teeth and go to bed. 
        </p>
@@ -69,7 +67,7 @@
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email address" name="mail" required>
         <label>
-         <input type="checkbox" checked="checked" name="subscribe"> Daily Newsletter
+         <input type="checkbox" checked="checked" name="Sign Up"> 
         </label>
           <input type="submit" value="Sign Up">
      </form>
