--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
      <form action="">
       <h2>Sign up for my Newsletter</h2>
         <p>Enter your Name and Email Address down below.</p>
-  
+          <form name="contact-form" netlify>
         <input type="text" placeholder="Name" name="name" required>
         <input type="text" placeholder="Email address" name="mail" required>
         <label>
