--- a/about.html
+++ b/about.html
@@ -3,28 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+  <body id="about-page">
   <header>
      <h1> A Day In my Life as a College Student</h1>
+     
      </header>  
         <nav>
             <a href="index.html">Home</a> |
             <a href="about.html">About Me</a> |
             <a href="contact.html">Contact</a> |
         </nav>
-     <h2>About the Author</h2>
-      <p> My name is Anthony Bellinger and I'm a senior at Michigan state University. I am from a small city called Romulus. I major in Information Science with a minor in businuess on a Cybersecuirty track. My first fall semester at Michigan State University i majored in Civil engenerring. In 2024 I made a descision to switch my major. Here at Michigan State University, I am apart of 2 student organzations. One of them I was on the Excuctive Board for in 2025.</p>
+     <h2> About the Author </h2>
 
-      <p>Some hobbies or things that I like to do is excersie. I occossinally like to go to the gym and love to run track. Additionally, I like to play video games like Call of Duty and many more popular video games. I also like  watch classic movies and tv shows and analyze their hidden meanings. I also like to watch fresh and new movies that are presented and shown in thearthers.  I also like to do commounity service with my firends and attend college organization events. I also love going on vacations especially somewhere tropical . Lastly,I enjoy spending time with my family and friends and really cherish hanging out with them. At the bottom of this page will now showcase my topped hobbies ranked list for my personal top 3 :</p>
-   <ol>
-     <li> I like traveling and going on vacations. </li>
-     <li> I enjoy spending time with my family and friends.</li>
-     <li> I like watching movies and analyzing them. </li>
-   </ol>
-     <img src = "vacation.png"  Width = 400px>
+     <div class="flex-container">
+        <Div class="Column-Left">
+          <p> My name is Anthony Bellinger and I'm a senior at Michigan state University. I am from a small city called Romulus. I major in Information Science with a minor in business on a Cybersecurity track. My first fall semester at Michigan State University i majored in Civil engineering. In 2024 I made a decision to switch my major. Here at Michigan State University, I am apart of 2 student organizations. One of them I was on the Executive Board for in 2025.</p>
+        </Div>
+        <Div class="Column-Middle">
+          <p>Some hobbies or things that I like to do is excersie. I occasionally like to go to the gym and love to run track. Additionally, I like to play video games like Call of Duty and many more popular video games. I also like  watch classic movies and tv shows and analyze their hidden meanings. I also like to watch fresh and new movies that are presented and shown in thearthers.  I also like to do commounity service with my firends and attend college organization events. I also love going on vacations especially somewhere tropical . Lastly,I enjoy spending time with my family and friends and really cherish hanging out with them. At the bottom of this page will now showcase my topped hobbies ranked list for my personal top 3 :</p>
+  
+        </Div>
+
+        <Div class="Column-Right">
+            <ol>
+              <li> I like traveling and going on vacations. </li>
+              <li> I enjoy spending time with my family and friends.</li>
+              <li> I like watching movies and analyzing them. </li>
+              </ol>
+                <img src = "vacation.png"  Width = 400px>
+
+        </Div>
+     </div>
+
      
 </body>
 </html>
