--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="sidebar">
        <section>
-       <img src = "weights.jpg" Width="400">
+       <img src = "weights.jpg" alt= "Weights Photo" Width="400">
        <br> 
        <h2 class = "highlight">
         Table</h2>
