--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        </p>
       </div>
   <section>
-      <div class="sidebar">
+    <div class="sidebar">
        <img src = "weights.jpg" alt= "Weights Photo" Width="400">
        <br> 
        <h2 class = "highlight">
@@ -71,7 +71,7 @@
              </tr>
            </tbody>
          </table>
-        <div>
+        </div>
       </div>
       <p>This is a table showcasing my classes, class times, and the amount of credits that the class is. </p>
   </section>
