--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       </div>
   <section>
     <div class="sidebar">
-       <img src = "weights.jpg" alt= "Weights Photo" Width="200" Height="200">
+       <img src = "weights.jpg" alt= "Weights Photo" Width="400">
        <br> 
        <h2 class = "highlight">
         Table</h2>
        <div class="overflow-auto">
-         <table border = "5">
+         <table class="TBTable">
            <thead>
              <tr>
                <th>Class</th>
