--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
   <section>
     <div class="sidebar">
-       <img src = "weights.jpg" alt= "Weights Photo" Width="400">
+       <img src = "weights.jpg"  class="Weightsphoto">
        <br> 
        <h2 class = "highlight">
         Table</h2>
