--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
        <h2 class = "highlight">
         Table</h2>
        <div class="overflow-auto">
-         <table border = "5">
+         <table class="TBtable">
            <thead>
              <tr>
                <th>Class</th>
@@ -88,7 +88,8 @@
         </label>
            <input type="submit" value="Sign Up">
      </form>
-    </div>
-    </div></div>
+  </div>
+  </div>
+  </div>
 </body>
 </html>
